@@ -14,7 +14,7 @@
  *
  **********************************************************************
  *
- * Last port: operation/buffer/BufferOp.java rev. 1.31 (JTS-1.7)
+ * Last port: operation/buffer/BufferOp.java rev. 1.35 (JTS-1.7)
  *
  **********************************************************************/
 
